--- a/.eslintrc
+++ b/.eslintrc
@@ -28,6 +28,7 @@
     "no-unused-vars": ["error", { "argsIgnorePattern": "^_" }],
     "no-use-before-define": "off",
     "@typescript-eslint/no-use-before-define": ["error"],
+    "@typescript-eslint/explicit-module-boundary-types": "off",
     "import/prefer-default-export": "off",
     "react/jsx-filename-extension": "off",
     "react/jsx-closing-bracket-location": "off",
